--- a/about.html
+++ b/about.html
@@ -7,13 +7,13 @@
   <meta name="keywords" content="HTML, CSS, JavaScript, Flexbox Gird">
   <meta name="author" content="Mamé">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  
   <link rel="stylesheet" href="css/flexboxgrid.css">
   <link rel="stylesheet" href="css/fontawesome.css">
   <link rel="stylesheet" href="css/style.css">
   <!-- Leave this here!  It renders the review buttons  -->
   <script src='./evaluation/init.js'></script>
-  <title>AppTheme</title>
+  <title>AppTheme | About</title>
 </head>
 
 <body>
