--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/style.css">
   <!-- Leave this here!  It renders the review buttons  -->
   <script src='./evaluation/init.js'></script>
-  <title>AppTheme</title>
+  <title>AppTheme | Contact</title>
 </head>
 
 <body>
