--- a/services.html
+++ b/services.html
@@ -17,6 +17,112 @@
 </head>
 
 <body>
+    <!-- HEADER -->
+ <header id="main-header">
+  <div class="container">
+    <div class="row end-xs end-sm end-md end-lg">
+      <div class="col-xs-12 col-sm-2 col-md-10 col-lg-2">
+        <h1><span class="primary-text">App</span>Theme</h1>
+      </div>
+      <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+        <nav id="navbar">
+          <ul>
+            <li ><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="current"><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header>
+
+  <!-- SUBHEADER -->
+  <section id="subheader">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <h1>Services</h1>
+        </div>
+      </div>
+    </div>
+  </section>
+
+   <!-- SUBHEADER -->
+   <section id="subheader">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <h1>About Us</h1>
+        </div>
+      </div>
+    </div>
+  </section>
+ <!-- MAIN PAGE -->
+ <section id="page" class="services">
+  <div class="container">
+    <div class="row center-xs center-sm center-md center-lg">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h2><span class="primary-text">See</span> What We Offer</h2>
+        <ul>
+          <li>
+            <h3>Web Design & Development</h3>
+            <p>Quisque dignissim elit lacus, ut fringilla Loremnisi molestie et. Pellentesque tincidunt nisl ac varius iaculis. Sed finibus augue at tellus porttitor pretium.</p>
+          </li>
+          <li>
+            <h3>Software Development & Programming</h3>
+            <p>Quisque dignissim elit lacus, ut fringilla Loremnisi molestie et. Pellentesque tincidunt nisl ac varius iaculis. Sed finibus augue at tellus porttitor pretium.</p>
+          </li>
+          <li>
+            <h3>Graphic Design</h3>
+            <p>Quisque dignissim elit lacus, ut fringilla Loremnisi molestie et. Pellentesque tincidunt nisl ac varius iaculis. Sed finibus augue at tellus porttitor pretium.</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+ <!-- COMPANY -->
+ <section id="company">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        <h4>Contact Us</h4>
+        <ul>
+          <li> (617) 555-5555</li>
+          <li></i> support@apptheme.test</li>
+          <li>400 Main st, Boston MA</li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        <h4>About Us</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+      </div>
+      <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        <h4>Newsletter</h4>
+        <p>Lorem ipsum dolor sit amet</p>
+        <form>
+          <input type="text" name="email" placeholder="Enter Email">
+          <button type="submit" name="button">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- FOOTER -->
+<footer id="main-footer">
+  <div class="container">
+    <div class="row center-xs center-sm center-md center-lg">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <p>Copyright &copy; 2017 | AppTheme</p>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 
 </html>
