--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div class="container">
     <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-       
+        <img src="images/iphone.png" alt="phone picture">
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <h2>Core Features</h2>
@@ -130,7 +130,7 @@
       <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
         <h4>Contact Us</h4>
         <ul>
-          <li><i class="fa fa-phone"></i>(617) 555-5555</li>
+          <li><i class="fa fa-phone"></i> (617) 555-5555</li>
           <li><i class="fa fa-envelope"></i> support@apptheme.test</li>
           <li><i class="fa fa-map-marker"></i> 400 Main st, Boston MA</li>
         </ul>
