--- a/services.html
+++ b/services.html
@@ -8,9 +8,10 @@
   <meta name="author" content="Mamé">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="css/flexboxgrid.css">
-  <link rel="stylesheet" href="css/fontawesome.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/flexboxgrid.css" >
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css"> 
+  <link rel="stylesheet" href="./css/style.css" >
   <!-- Leave this here!  It renders the review buttons  -->
   <script src='./evaluation/init.js'></script>
   <title>AppTheme | Services</title>
@@ -91,9 +92,9 @@
       <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
         <h4>Contact Us</h4>
         <ul>
-          <li> (617) 555-5555</li>
-          <li></i> support@apptheme.test</li>
-          <li>400 Main st, Boston MA</li>
+          <li><i class="fa fa-phone"></i> (617) 555-5555</li>
+          <li><i class="fa fa-envelope"></i> support@apptheme.test</li>
+          <li><i class="fa fa-map-marker"></i> 400 Main st, Boston MA</li>
         </ul>
       </div>
       <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
