changes flex-grid propeties related #6

--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
    <!-- HEADER -->
  <header id="main-header">
   <div class="container">
-    <div class="row end-xs end-sm end-md end-lg">
-      <div class="col-xs-12 col-sm-2 col-md-10 col-lg-2">
+    <div class="row  end-sm end-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
+      <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <h1><span class="primary-text">App</span>Theme</h1>
       </div>
       <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
@@ -50,16 +50,6 @@
     </div>
   </section>
 
-   <!-- SUBHEADER -->
-   <section id="subheader">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <h1>About Us</h1>
-        </div>
-      </div>
-    </div>
-  </section>
   <!-- MAIN PAGE -->
   <section id="page" class="about">
     <div class="container">
