--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,8 @@
     <!-- HEADER -->
  <header id="main-header">
   <div class="container">
-    <div class="row end-xs end-sm end-md end-lg">
-      <div class="col-xs-12 col-sm-2 col-md-10 col-lg-2">
+    <div class="row end-sm end-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
+      <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <h1><span class="primary-text">App</span>Theme</h1>
       </div>
       <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
@@ -50,16 +50,7 @@
       </div>
     </section>
 
-   <!-- SUBHEADER -->
-   <section id="subheader">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <h1>About Us</h1>
-        </div>
-      </div>
-    </div>
-  </section>
+
   <section id="page" class="contact">
     <div class="container">
       <div class="row center-xs center-sm center-md center-lg">
