--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Free Web Design">
@@ -22,8 +21,8 @@
  <!-- HEADER -->
  <header id="main-header">
   <div class="container">
-    <div class="row end-xs end-sm end-md end-lg">
-      <div class="col-xs-12 col-sm-2 col-md-10 col-lg-2">
+    <div class="row end-sm end-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
+      <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <h1><span class="primary-text">App</span>Theme</h1>
       </div>
       <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
@@ -111,10 +110,10 @@
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <h2>Core Features</h2>
         <ul>
-          <li> <i class="fa fa-check"></i> Fully Optimized</li>
+          <li><i class="fa fa-check"></i> Fully Optimized</li>
           <li><i class="fa fa-check"></i> Free Support</li>
-          <li> <i class="fa fa-check"></i> Free Upgrades</li>
-          <li"><i class="fa fa-check"></i> UpTime Guarantee</li>
+          <li><i class="fa fa-check"></i> Free Upgrades</li>
+          <li><i class="fa fa-check"></i> UpTime Guarantee</li>
           <li><i class="fa fa-check"></i> Mulitple Users</li>
           <li><i class="fa fa-check"></i> Plug & Play</li>
         </ul>
