--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
  <!-- COMPANY -->
  <section id="company">
   <div class="container">
-    <div class="row">
+    <div class="row center-xs">
       <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
         <h4>Contact Us</h4>
         <ul>
