--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="./css/flexboxgrid.css" >
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css"> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"> 
   <link rel="stylesheet" href="./css/style.css" >
   <!-- Leave this here!  It renders the review buttons  -->
   <script src='./evaluation/init.js'></script>
@@ -44,7 +43,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <h1>Contact</h1>
+            <h2>Contact</h2>
           </div>
         </div>
       </div>
@@ -60,15 +59,15 @@
           <form>
             <div>
               <label for="name">Name</label><br>
-              <input type="text" name="name">
+              <input type="text" name="name" id="name">
             </div>
             <div>
               <label for="email">Email</label><br>
-              <input type="text" name="email">
+              <input type="text" name="email" id="email">
             </div>
             <div>
               <label for="message">Message</label><br>
-              <textarea name="message"></textarea>
+              <textarea name="message" id="message"></textarea>
             </div>
             <button type="submit" name="button">Submit</button>
           </form>
