--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="./css/flexboxgrid.css" >
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css"> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   <link rel="stylesheet" href="./css/style.css" >
   <!-- Leave this here!  It renders the review buttons  -->
   <script src='./evaluation/init.js'></script>
@@ -44,7 +43,7 @@
   <div class="container">
   <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg ">
     <div class="col-xl-12 col-sm-12 col-md-12 col-md-12">
-      <h1>Welcome to <span class="primary-text">AppTheme</span></h1>
+      <h2>Welcome to <span class="primary-text">AppTheme</span></h2>
       <p>A template built with HTML5, CSS3 and Flexboxgrid</p>
     </div>
   </div>
@@ -97,7 +96,6 @@
       </div>
     </div>
   </div>
-</div>
 </section>
 
 <!-- INFO SECTION -->
